--- a/config.toml
+++ b/config.toml
@@ -6,10 +6,10 @@
 
 # The URL of your website.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "/"
+baseurl = "https://www.richardli.xyz/"
 
 # Title of your site
-title = "Academic"
+title = "Richard Yingru Li - Chinese University of Hong Kong"
 
 # Your copyright notice - appears in site footer.
 # To display a copyright symbol, type `&copy;`.
