--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@
 baseurl = "https://www.richardli.xyz/"
 
 # Title of your site
-title = "Richard Yingru Li - Chinese University of Hong Kong"
+title = "Carpe Noctem - Richard Yingru"
 
 # Your copyright notice - appears in site footer.
 # To display a copyright symbol, type `&copy;`.
@@ -23,10 +23,10 @@ preserveTaxonomyNames = true
 paginate = 10
 
 # Enable comments by entering your Disqus shortname
-disqusShortname = ""
+disqusShortname = "szrlee"
 
 # Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = ""
+googleAnalytics = "UA-119114778-1"
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
@@ -34,7 +34,7 @@ hasCJKLanguage = false  # Set `true` for Chinese/Japanese/Korean languages.
 defaultContentLanguageInSubdir = false
 
 # Get last modified date for content from Git?
-enableGitInfo = false
+enableGitInfo = ture
 
 [outputs]
   home = [ "HTML", "CSS", "RSS" ]
@@ -50,22 +50,22 @@ enableGitInfo = false
 [params]
   # Color theme.
   #   Choose from `default`, `ocean`, `forest`, `coffee`, `dark`, or `1950s`.
-  color_theme = "default"
+  color_theme = "ocean"
 
   # Font style.
   #   Choose from `default`, `classic`, or `playfair`.
-  font = "default"
+  font = "classic"
 
   # Your details.
   name = "Richard Yingru Li"
-  role = "PhD Student at Chinese University of Hong Kong"
+  role = "PhD Student"
 
   # Organizations/Affiliations.
   #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
-  organizations = [ { name = "Chinese University of Hong Kong", url = "http://www.cuhk.edu.cn/en" }, { name = "Chinese University of Hong Kong", url = "https://ai.tencent.com/ailab/index.html" } ]
+  organizations = [ { name = "Chinese University of Hong Kong", url = "http://www.cuhk.edu.cn/en" }, { name = "Tencent AI Lab", url = "https://ai.tencent.com/ailab/index.html" } ]
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
-  avatar = "portrait.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
+  avatar = "LinkedIn-Yingru.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
   email = "szrlee@gmail.com"
   address = "Chinese Unversity of Hong Kong, Shenzhen, China"
   office_hours = "email for appointment"
@@ -82,7 +82,7 @@ enableGitInfo = false
 
   # Diplay a logo in navigation bar rather than title (optional).
   #   To enable, place an image in `static/img/` and reference its filename below. To disable, set the value to "".
-  logo = ""
+  logo = "Joint-Lab-Logo.png"
 
   # Enable/disable map in Contact widget.
   # To show your address on a map in the contact widget, you need to enter your latitude, longitude and choose
@@ -295,9 +295,9 @@ enableGitInfo = false
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 # [[menu.main]]
-#    name = "CV"
-#    url = "files/cv.pdf"
-#    weight = 7
+  name = "CV"
+  url = "files/cv-yingru-long-eng.pdf"
+  weight = 7
 
 # Taxonomies.
 [taxonomies]
