--- a/config.toml
+++ b/config.toml
@@ -50,11 +50,11 @@ enableGitInfo = ture
 [params]
   # Color theme.
   #   Choose from `default`, `ocean`, `forest`, `coffee`, `dark`, or `1950s`.
-  color_theme = "ocean"
+  color_theme = "default"
 
   # Font style.
   #   Choose from `default`, `classic`, or `playfair`.
-  font = "classic"
+  font = "default"
 
   # Your details.
   name = "Richard Yingru Li"
@@ -249,10 +249,10 @@ enableGitInfo = ture
 
   # Link to a PDF of your resume/CV from the About widget.
   # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-  # [[params.social]]
-  #   icon = "cv"
-  #   icon_pack = "ai"
-  #   link = "files/cv.pdf"
+  [[params.social]]
+    icon = "cv"
+    icon_pack = "ai"
+    link = "files/cv-yingru-long-eng.pdf"
 
 # Navigation Links
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
@@ -295,9 +295,9 @@ enableGitInfo = ture
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 # [[menu.main]]
-  name = "CV"
-  url = "files/cv-yingru-long-eng.pdf"
-  weight = 7
+#  name = "CV"
+#  url = "files/cv-yingru-long-eng.pdf"
+#  weight = 7
 
 # Taxonomies.
 [taxonomies]
