--- a/config.toml
+++ b/config.toml
@@ -34,7 +34,7 @@ hasCJKLanguage = false  # Set `true` for Chinese/Japanese/Korean languages.
 defaultContentLanguageInSubdir = false
 
 # Get last modified date for content from Git?
-enableGitInfo = ture
+enableGitInfo = true
 
 [outputs]
   home = [ "HTML", "CSS", "RSS" ]
