--- a/config.toml
+++ b/config.toml
@@ -122,7 +122,7 @@ enableGitInfo = true
 
   # Enable global LaTeX math rendering?
   #   If false, you can enable it locally on a per page basis.
-  math = false
+  math = true
 
   # Highlight.js options
   #   highlight
