--- a/config.toml
+++ b/config.toml
@@ -257,7 +257,7 @@ enableGitInfo = true
   [[params.social]]
     icon = "cv"
     icon_pack = "ai"
-    link = "files/cv-yingru-long-eng.pdf"
+    link = "files/Awesome-CV-Yingru.pdf"
 
 # Navigation Links
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
